while/tests/valid/IntDiv_Valid_2.while
int f(int x) {
    return x / 3;
}

void main() {
    print f(10);
}
