while/tests/invalid-parsing/Parsing_Invalid_1.while
void f(int x) {

}

void f(int y) {

}